Fix tooltip wrapping on firefox
[skip ci]

--- a/docs/mkDocs/docs/style/misc.css
+++ b/docs/mkDocs/docs/style/misc.css
@@ -31,7 +31,7 @@ a.annot:hover span.annottext {
     width: 100%;
     left: 0;
     top: 100%;
-    overflow-wrap: break-word;
+    white-space: pre-wrap;
 }
 
 
